Updated Landing page layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,4 @@
 .App {
   background-color: black;
-  height: 100vh;
-  text-align: center;
 }
 
-@font-face {
-  font-family: "Futura Bold";   /*Can be any text*/
-  src: local("Futura Bold"),
-    url('./fonts/Futura\ Bold.otf') format("opentype");
-}
